[package]
name = "ghrepo"
version = "0.5.0-dev"
edition = "2021"
rust-version = "1.64"
description = "Parse & construct GitHub repository URLs & specifiers"
authors = ["John Thorvald Wodder II <ghrepo@varonathe.org>"]
repository = "https://github.com/jwodder/ghrepo-rust"
license = "MIT"
keywords = ["GitHub", "URL-parsing", "repository"]
categories = ["command-line-utilities"]
exclude = ["/.*"]

[dependencies]
lexopt = "0.3.0"
serde = { version = "1.0.159", optional = true }

[dev-dependencies]
assert_cmd = "2.0.10"
rstest = { version = "0.17.0", default-features = false }
rstest_reuse = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
which = "4.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
