[package]
name = "ghrepo"
version = "0.6.0-dev"
edition = "2021"
rust-version = "1.65"
description = "Parse & construct GitHub repository URLs & specifiers"
authors = ["John Thorvald Wodder II <ghrepo@varonathe.org>"]
repository = "https://github.com/jwodder/ghrepo-rust"
license = "MIT"
keywords = ["GitHub", "URL-parsing", "repository"]
categories = ["command-line-utilities"]
exclude = ["/.*"]

[dependencies]
lexopt = { version = "0.3.0", optional = true }
serde = { version = "1.0.163", optional = true }

[dev-dependencies]
assert_cmd = "2.0.11"
rstest = { version = "0.17.0", default-features = false }
rstest_reuse = "0.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.6.0"
which = "4.4.0"

[features]
default = ["cli"]
cli = ["dep:lexopt"]

[[bin]]
name = "ghrepo"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
