[package]
name = "ghrepo"
version = "0.6.0-dev"
edition = "2021"
rust-version = "1.70"
description = "Parse & construct GitHub repository URLs & specifiers"
authors = ["John Thorvald Wodder II <ghrepo@varonathe.org>"]
repository = "https://github.com/jwodder/ghrepo-rust"
license = "MIT"
keywords = ["GitHub", "URL-parsing", "repository"]
categories = ["command-line-utilities"]
exclude = ["/.*"]

[dependencies]
lexopt = { version = "0.3.0", optional = true }
serde = { version = "1.0.192", optional = true }

[dev-dependencies]
assert_cmd = "2.0.12"
rstest = { version = "0.18.2", default-features = false }
rstest_reuse = "0.6.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
which = "5.0.0"

[features]
default = ["cli"]
cli = ["dep:lexopt"]

[[bin]]
name = "ghrepo"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
