[package]
name = "ghrepo"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
description = "Parse & construct GitHub repository URLs & specifiers"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["GitHub", "URL-parsing", "repository"]

[dependencies]
serde = { version = "1.0.200", optional = true }

[dev-dependencies]
repomaker = { path = "../repomaker" }
rstest = { version = "0.25.0", default-features = false }
rstest_reuse = "0.7.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tempfile = "3.10.1"
which = "8.0.0"

[features]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
